src/test/deca/syntax/valid/this_operation_main.deca
// Description:
//    Opération arithmétique sur this
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023

{
    int x = 5;
    (this)+x;
}
