src/test/deca/syntax/invalid/identificateurNonMotReserve.deca
// Description:
//    Identificateur qui ne doit pas être un mot reservé
//
// Resultats:
//    erreur de compilation
//
// Historique:
//    cree le 11/01/2023

{
    new x, y;
}
